--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kashaf Haider's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+        }
+        .section {
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+        .personal-info {
+            background-color: #f0f8ff;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .personal-info:hover {
+            background-color: #add8e6;
+        }
+        .work-experience {
+            background-color: #e6ffe6;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .work-experience:hover {
+            background-color: #ccffcc;
+        }
+        .education {
+            background-color: #ffffe6;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .education:hover {
+            background-color: #ffffcc;
+        }
+        .certificates {
+            background-color: #ffe6e6;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .certificates:hover {
+            background-color: #ffcccc;
+        }
+        .accomplishments {
+            background-color: #e6e6ff;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .accomplishments:hover {
+            background-color: #ccccff;
+        }
+        .skills {
+            background-color: #ffe6b3;
+            color: #000;
+            transition: background-color 0.5s;
+        }
+        .skills:hover {
+            background-color: #ffdb99;
+        }
+    </style>
 </head>
 <body>
+    <div class="section personal-info">
+        <h2>Personal Information</h2>
+        <p><strong>Name:</strong> Kashaf Haider</p>
+        <p><strong>Phone:</strong> 03344447398</p>
+        <p><strong>Email:</strong> kashaff1998@gmail.com</p>
+        <p><strong>Date of Birth:</strong> 06/03/1998</p>
+        <p><strong>Gender:</strong> Female</p>
+        <p><strong>Marital Status:</strong> Married</p>
+        <p><strong>Address:</strong> I 8 1, street #07 Near cricket ground Islamabad, Islamabad, Pakistan, Islamabad.</p>
+        <p><strong>Nationality:</strong> Pakistan</p>
+    </div>
 
-  Welcome to the HTML Portfolio Project
+    <div class="section work-experience">
+        <h2>Work Experience</h2>
+        <p><strong>March 2021 - October 2021:</strong> Careem (CRO), Islamabad, Islamabad Capital Territory</p>
+        <ul>
+            <li>Resolving queries of Captain online and on calls.</li>
+            <li>Resolving queries of customers online and on calls.</li>
+        </ul>
+        <p><strong>January 2023 - June 2023:</strong> High School Teacher, Islamabad, Pakistan</p>
+        <ul>
+            <li>Managing their daily school tasks.</li>
+            <li>Assigning their daily home tasks.</li>
+            <li>Marking their summer tasks and grading them.</li>
+            <li>Delivering daily specified Computer Sciences lectures.</li>
+            <li>Weekly practical computer labs and other activities.</li>
+        </ul>
+        <p><strong>December 2022 - Till Date:</strong> Online Freelancing, Islamabad, Islamabad Capital Territory</p>
+        <ul>
+            <li>Data Analyst (Excel, Word).</li>
+            <li>Amazon VA.</li>
+            <li>Shopify Store Developer.</li>
+        </ul>
+    </div>
 
+    <div class="section education">
+        <h2>Education</h2>
+        <p><strong>October 2018 - October 2022:</strong> Bachelors of Sciences in Computer Science - University of Central Punjab, Rawalpindi, Punjab.</p>
+        <p><strong>September 2015 - September 2017:</strong> Computer Sciences - Punjab College for Women</p>
+        <p><strong>March 2013 - March 2015:</strong> Matric in Bio Sciences - Islamabad Model School for Girls (VI-X), I-8-1 Islamabad, Senior Secondary School Certificate (SSCE) Islamabad, Islamabad Capital Territory.</p>
+    </div>
+
+    <div class="section certificates">
+        <h2>Certificates</h2>
+        <p><strong>July 2017:</strong> 20 Days Montessori Training Workshop</p>
+        <p><strong>December 2018:</strong> One Year Diploma in Montessori Teachers Training Early Childhood (age 3 to 6)</p>
+        <p><strong>July 2018:</strong> IELTS from International Islamic University Islamabad (3 months)</p>
+        <p><strong>June 2023:</strong> Data Analytics and Business Intelligence (3 months)</p>
+        <p><strong>June 2023:</strong> Freelancing</p>
+    </div>
+
+    <div class="section accomplishments">
+        <h2>Accomplishments</h2>
+        <ul>
+            <li>FYP of WordPress website on One Dollar Online Store.</li>
+            <li>Shopify Professional Store on Digital Technology Products.</li>
+            <li>Used Microsoft Excel to Develop Inventory Spreadsheet.</li>
+        </ul>
+    </div>
+
+    <div class="section skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Microsoft Word</li>
+            <li>Microsoft Excel</li>
+            <li>Canva Design</li>
+            <li>Notepad++</li>
+            <li>PowerPoint</li>
+            <li>HTML, CSS</li>
+            <li>WordPress Frontend</li>
+        </ul>
+    </div>
 </body>
 </html>
